# characteristicParameters

./: LICENSE  README.md  pyproject.toml  requirements.txt  sonar-project.properties
.github/workflows/: build.yml
figures/: Fig7.py  S_fig1.py  S_fig1_generate_data.py  fig2.py  fig3.py  fig4.py  fig4_generate_data.py  fig4_plot.py  fig4_v2.py  fig5.py  fig6.py  fig6_fig7_data.py  fig6_v2.py  fig7.py  fig7_v1.py  fig7_v2.py  fig7a.py  fig7b.py  fig_simulateErrors.py  fig_simulateErrors_plot.py  pi_axis_plotter.py
figures/data/: S_fig1_measured_values_1_L2norm.pickle  measured_values_fig3.pickle  measured_values_fig4.pickle  true_values_fig3.pickle
figures_main_paper/: fig2.py  fig3.py  fig4.py  fig4_generate_data.py  fig5.py  fig6.py  fig7.py
figures_paper/: fig2.py  fig3.py  fig4.py  fig4_generate_data.py  fig5.py  fig6.py  section3_2_data.py
figures_supplemental/: S_fig1.py  S_fig1_colorbar.py  S_fig1_generate_data.py  S_fig1_v2.py  S_fig2.py  S_fig2_colorbar.py  S_fig2_generate_data.py  S_fig2_generate_data_v2.py  S_fig2_v2.py  S_fig6.py
figures_supplemental/Archiv/: S_fig2_v2.py
figures_supplemental/data/: S_fig1_measured_values_2_L2norm.pickle  S_fig1_measured_values_3_L2norm.pickle  S_fig1_measured_values_4_L2norm.pickle  S_fig1_true_values.pickle
plotted_figures/: fig3.py  pi_axis_plotter.py
src/characteristicParameters/: __init__.py  _helpers.py  analyticFormulas.py  measurementProcedure.py  optimizationProcedure.py  rgbMethod.py  (+1 more)
tests/: test_helpers.py  test_measurement_procedure.py  test_mueller_calculus.py  test_triangle_wave_functions.py
(+17 files in other folders)
